Starting to descrube what i do, deleted the tests files and added light and dark mode correctly to the cards

--- a/dark.css
+++ b/dark.css
@@ -3,6 +3,11 @@
   background-color: #000000;
   border: solid #fcc200;
 }
+article {
+  background-color: #521555;
+  color: #fcc4ff;
+  border: solid 3px #fcc4ff;
+}
 button {
   border: solid 2px #fcc200;
 }
