--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
 /* Código CSS aquí */
 article {
-  background-color: #fcc4ff;
   border-radius: 10px;
-  border: solid 3px #faa3ff;
   padding: 5px 15px;
   margin-bottom: 10px;
   width: 45%; 
